ehhh...maybe this way, with some logging
Signed-off-by: Aaron Cupp <mrcupp@mrcupp.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,11 @@ jobs:
 
             if [ -n "$CIRCLE_TAG" ]; then 
               echo "Found CIRCLE_TAG env var! Using CIRCLE_TAG for BUILD_TAG"
+              echo 'export $BUILD_TAG=$CIRCLE_TAG' 
               echo 'export $BUILD_TAG=$CIRCLE_TAG' >> $BASH_ENV 
             else
               echo "Could not find CIRCLE_TAG env var! Using SHA1 for BUILD_TAG"
+              echo 'export $BUILD_TAG=$CIRCLE_SHA1' 
               echo 'export $BUILD_TAG=$CIRCLE_SHA1' >> $BASH_ENV
             fi
             
@@ -81,9 +83,11 @@ jobs:
 
             if [ -n "$CIRCLE_TAG" ]; then 
               echo "Found CIRCLE_TAG env var! Using CIRCLE_TAG for BUILD_TAG"
+              echo 'export $BUILD_TAG=$CIRCLE_TAG' 
               echo 'export $BUILD_TAG=$CIRCLE_TAG' >> $BASH_ENV 
             else
               echo "Could not find CIRCLE_TAG env var! Using SHA1 for BUILD_TAG"
+              echo 'export $BUILD_TAG=$CIRCLE_SHA1' 
               echo 'export $BUILD_TAG=$CIRCLE_SHA1' >> $BASH_ENV
             fi
             
@@ -146,9 +150,11 @@ jobs:
 
             if [ -n "$CIRCLE_TAG" ]; then 
               echo "Found CIRCLE_TAG env var! Using CIRCLE_TAG for BUILD_TAG"
+              echo 'export $BUILD_TAG=$CIRCLE_TAG' 
               echo 'export $BUILD_TAG=$CIRCLE_TAG' >> $BASH_ENV 
             else
               echo "Could not find CIRCLE_TAG env var! Using SHA1 for BUILD_TAG"
+              echo 'export $BUILD_TAG=$CIRCLE_SHA1' 
               echo 'export $BUILD_TAG=$CIRCLE_SHA1' >> $BASH_ENV
             fi
             
