this should work...hopefully
Signed-off-by: Aaron Cupp <mrcupp@mrcupp.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,19 +11,11 @@ jobs:
       - run:
           name: Setup Environment Variables
           command: |
-            echo "Circle Tag: $CIRCLE_TAG"
-            echo "Circle Sha1: $CIRCLE_SHA1"
-
             if [ -n "$CIRCLE_TAG" ]; then 
-              echo "Found CIRCLE_TAG env var! Using CIRCLE_TAG for BUILD_TAG"
-              echo 'export $BUILD_TAG=$CIRCLE_TAG' 
-              echo 'export $BUILD_TAG=$CIRCLE_TAG' >> $BASH_ENV 
+              echo 'export BUILD_TAG=$CIRCLE_TAG' >> $BASH_ENV 
             else
-              echo "Could not find CIRCLE_TAG env var! Using SHA1 for BUILD_TAG"
-              echo 'export $BUILD_TAG=$CIRCLE_SHA1' 
-              echo 'export $BUILD_TAG=$CIRCLE_SHA1' >> $BASH_ENV
-            fi
-            
+              echo 'export BUILD_TAG=$CIRCLE_SHA1' >> $BASH_ENV
+            fi        
             source $BASH_ENV
       - slack/notify:
           custom: |
@@ -78,19 +70,11 @@ jobs:
       - run:
           name: Setup Environment Variables
           command: |
-            echo "Circle Tag: $CIRCLE_TAG"
-            echo "Circle Sha1: $CIRCLE_SHA1"
-
             if [ -n "$CIRCLE_TAG" ]; then 
-              echo "Found CIRCLE_TAG env var! Using CIRCLE_TAG for BUILD_TAG"
-              echo 'export $BUILD_TAG=$CIRCLE_TAG' 
-              echo 'export $BUILD_TAG=$CIRCLE_TAG' >> $BASH_ENV 
+              echo 'export BUILD_TAG=$CIRCLE_TAG' >> $BASH_ENV 
             else
-              echo "Could not find CIRCLE_TAG env var! Using SHA1 for BUILD_TAG"
-              echo 'export $BUILD_TAG=$CIRCLE_SHA1' 
-              echo 'export $BUILD_TAG=$CIRCLE_SHA1' >> $BASH_ENV
-            fi
-            
+              echo 'export BUILD_TAG=$CIRCLE_SHA1' >> $BASH_ENV
+            fi        
             source $BASH_ENV
       - slack/notify:
           custom: |
@@ -145,19 +129,11 @@ jobs:
       - run:
           name: Setup Environment Variables
           command: |
-            echo "Circle Tag: $CIRCLE_TAG"
-            echo "Circle Sha1: $CIRCLE_SHA1"
-
             if [ -n "$CIRCLE_TAG" ]; then 
-              echo "Found CIRCLE_TAG env var! Using CIRCLE_TAG for BUILD_TAG"
-              echo 'export $BUILD_TAG=$CIRCLE_TAG' 
-              echo 'export $BUILD_TAG=$CIRCLE_TAG' >> $BASH_ENV 
+              echo 'export BUILD_TAG=$CIRCLE_TAG' >> $BASH_ENV 
             else
-              echo "Could not find CIRCLE_TAG env var! Using SHA1 for BUILD_TAG"
-              echo 'export $BUILD_TAG=$CIRCLE_SHA1' 
-              echo 'export $BUILD_TAG=$CIRCLE_SHA1' >> $BASH_ENV
-            fi
-            
+              echo 'export BUILD_TAG=$CIRCLE_SHA1' >> $BASH_ENV
+            fi        
             source $BASH_ENV
       - slack/notify:
           custom: |
