--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -46,6 +46,9 @@ spec:
             limits:
               cpu: "500m"
               memory: "512Mi"
+      imagePullSecrets:
+        - name: ghcr-pull
+
 ---
 # setup NodePort access (for use with nginx)
 apiVersion: v1
