--- a/sitecode/hugo.toml
+++ b/sitecode/hugo.toml
@@ -46,7 +46,7 @@ pygmentsCodefencesGuessSyntax = true
 [Author]
   # Set only your "username" for default hosts and full URLs otherwise (e.g., "https://MyGitLab.org/username")
   name = "Aaron Cupp"
-  website = "mrcupp.com"
+  #website = "mrcupp.com"
   email = "mrcupp@mrcupp.com"
   #facebook = "username"
   github = "iammrcupp"
