--- a/sitecode/hugo.toml
+++ b/sitecode/hugo.toml
@@ -78,39 +78,38 @@ pygmentsCodefencesGuessSyntax = true
   #strava = "userid"
 
 [[menu.main]]
-    name = "Blog"
-    url = ""
-    weight = 1
-
-[[menu.main]]
     name = "About"
     url = "page/about/"
-    weight = 3
-
-[[menu.main]]
-    identifier = "samples"
-    name = "Samples"
-    weight = 2
-
-[[menu.main]]
-    parent = "samples"
-    name = "Big Image Sample"
-    url = "post/2017-03-07-bigimg-sample"
     weight = 1
 
 [[menu.main]]
-    parent = "samples"
-    name = "Math Sample"
-    url = "post/2017-03-05-math-sample"
+    name = "Resume/CV"
+    url = "page/resume/"
     weight = 2
 
 [[menu.main]]
-    parent = "samples"
-    name = "Code Sample"
-    url = "post/2016-03-08-code-sample"
+    name = "Blog"
+    url = "post/"
     weight = 3
+
+[[menu.main]]
+    identifier = "projects"
+    name = "Projects"
+    weight = 4
+
+[[menu.main]]
+    parent = "projects"
+    name = "Tech-Noid Systems"
+    url = "page/tech-noid-systems"
+    weight = 1
+
+[[menu.main]]
+    parent = "projects"
+    name = "Emotional Support Pizza"
+    url = "page/emotional-support-pizza"
+    weight = 2
 
 [[menu.main]]
     name = "Tags"
     url = "tags"
-    weight = 3
+    weight = 5
