--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,9 +47,11 @@ jobs:
             }
           event: always
       - checkout
-          post: 
-            - git submodule init
-            - git submodule update
+      - run: 
+          name: "update git submodules"
+          command: |
+            git submodule init
+            git submodule update
       - run:
           name: Log in to github container repo (ghcr.io)
           command: |
@@ -109,9 +111,11 @@ jobs:
             }
           event: always
       - checkout
-          post: 
-            - git submodule init
-            - git submodule update
+      - run: 
+          name: "update git submodules"
+          command: |
+            git submodule init
+            git submodule update
       - run:
           name: Log in to github container repo (ghcr.io)
           command: |
@@ -171,9 +175,11 @@ jobs:
             }
           event: always
       - checkout
-          post: 
-            - git submodule init
-            - git submodule update
+      - run: 
+          name: "update git submodules"
+          command: |
+            git submodule init
+            git submodule update
       - run:
           name: Log in to github container repo (ghcr.io)
           command: |
