--- a/sitecode/hugo.toml
+++ b/sitecode/hugo.toml
@@ -1,4 +1,4 @@
-baseurl = "https://mrcupp.com"
+baseurl = "//mrcupp.com"
 DefaultContentLanguage = "en"
 title = "IamMrCupp"
 theme = "beautifulhugo"
