--- a/.gitignore
+++ b/.gitignore
@@ -137,9 +137,9 @@ Thumbs.db
 
 ### Hugo ###
 # Generated files by hugo
-/public/
-/resources/_gen/
-/assets/jsconfig.json
+public/
+resources/_gen/
+assets/jsconfig.json
 hugo_stats.json
 
 # Executable may be added to repository
@@ -148,4 +148,4 @@ hugo.darwin
 hugo.linux
 
 # Temporary lock file while building
-/.hugo_build.lock
+.hugo_build.lock
