--- a/sitecode/hugo.toml
+++ b/sitecode/hugo.toml
@@ -17,7 +17,7 @@ enableGitInfo = true
 #  homeTitle = "Beautiful Hugo Theme" # Set a different text for the header on the home page
   subtitle = "Personal Website for Aaron Cupp"
   mainSections = ["post","posts"]
-  logo = "img/avatar-icon.png" # Expecting square dimensions
+  logo = "img/mrcupp-logo.png" # Expecting square dimensions
   favicon = "img/favicon.ico"
   dateFormat = "January 2, 2006"
   #commit = "https://github.com/iammrcupp/mrcupp-project/tree/"
