update the config
Signed-off-by: Aaron Cupp <mrcupp@mrcupp.com>

--- a/sitecode/hugo.toml
+++ b/sitecode/hugo.toml
@@ -20,8 +20,7 @@ enableGitInfo = true
   logo = "img/mrcupp-logo.png" # Expecting square dimensions
   favicon = "img/favicon.ico"
   dateFormat = "January 2, 2006"
-  #commit = "https://github.com/iammrcupp/mrcupp-project/tree/"
-  commit = false
+  commit = "https://github.com/IamMrCupp/mrcupp-project/tree/"
   rss = true
   comments = true
   readingTime = true
