update the dockerfile and cicrcle config
Signed-off-by: Aaron Cupp <mrcupp@mrcupp.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,13 @@
 # config for mrcupp-project circleci
 version: 2.1
+
 orbs:
-  slack: circleci/slack@4.4.2
+  slack: circleci/slack@5.1.1
+
 jobs:
   build-x86:
     machine:
-      image: ubuntu-2004:202201-02
+      image: ubuntu-2404:2024.11.1
     resource_class: medium
     steps:
       - run:
@@ -67,9 +69,10 @@ jobs:
       - slack/notify:
           event: fail
           template: basic_fail_1
+  
   build-arm64:
     machine:
-      image: ubuntu-2004:202201-02
+      image: ubuntu-2404:2024.11.1
     resource_class: arm.medium
     steps:
       - run:
@@ -133,7 +136,7 @@ jobs:
           template: basic_fail_1
   upload-manifest:
     machine:
-      image: ubuntu-2004:202201-02
+      image: ubuntu-2404:2024.11.1
     resource_class: medium
     steps:
       - run:
