update this to account for the changes in hugo
Signed-off-by: Aaron Cupp <mrcupp@mrcupp.com>

--- a/sitecode/hugo.yaml
+++ b/sitecode/hugo.yaml
@@ -15,7 +15,7 @@ module:
       disabled: "false"
       mounts:
         - source: "layouts/shortcodes/"
-          target: "layouts/shortcodes/"
+          target: "layouts/_shortcodes/"
     - path: github.com/halogenica/beautifulhugo
       disabled: "false"
 
